--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -107,6 +107,7 @@ services:
       - 9411:9411
     environment:
       COLLECTOR_ZIPKIN_HTTP_PORT: 9411
+      TZ: America/Cuiaba
 
   prometheus:
     image: prom/prometheus
@@ -118,6 +119,8 @@ services:
     network_mode: bridge
     ports:
       - "9090:9090"
+    environment:
+      TZ: America/Cuiaba
 
   grafana:
     image: grafana/grafana
@@ -128,6 +131,8 @@ services:
       - "3000:3000"
     depends_on:
       - prometheus
+    environment:
+      TZ: America/Cuiaba
 
   vault:
     image: vault:1.5.3
