--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.error.include-stacktrace=never
 
 # actuator
-#management.endpoints.web.exposure.include=info, metrics, health, prometheus
-#management.endpoints.web.exposure.exclude=env,beans
-#management.endpoints.enabled-by-default=true
-#management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=info, metrics, health, prometheus
+management.endpoints.web.exposure.exclude=env,beans
+management.endpoints.enabled-by-default=true
+management.endpoint.health.show-details=always
 
 
 # resource server config jwt
@@ -13,16 +13,16 @@ server.error.include-stacktrace=never
 
 #logging.level.org.springframework.security=off
 
-spring.application.name=Transação
+spring.application.name=Desafio_Transacao
 
 # Jaeger - Habilita ou não
-#opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
+opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
 
 # Jaeger - Nome do serviço
-#opentracing.jaeger.service-name=${spring.application.name}
+opentracing.jaeger.service-name=${spring.application.name}
 
 # Jaeger - Endereço para enviar os metadados (trace, span, etc)
-#opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
+opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
 
 # Jaeger - Tipo de amostragem (probabilístico - 1 = 100%)
-#opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
+opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
