--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -93,6 +93,7 @@ services:
       LOG_LEVEL: INFO
       KAFKA_HOST: "kafka:29092"
       JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      TRANSACTION_DELAY: 30000
 
   jaeger:
     image: jaegertracing/all-in-one
@@ -142,6 +143,17 @@ services:
       VAULT_DEV_ROOT_TOKEN_ID: ee413645-dbe8-4848-afc6-6bb2768ada75
       VAULT_TOKEN: ee413645-dbe8-4848-afc6-6bb2768ada75
       VAULT_ADDR: http://127.0.0.1:8200
+      
+  mysql_transacao: 
+      image: mysql:latest
+      container_name: mysql_transacao
+      environment: 
+        - MYSQL_DATABASE=transacao
+        - MYSQL_ROOT_PASSWORD=root
+      volumes: 
+        - mysql-volume:/var/lib/mysql
+      ports: 
+        - 3306:3306
 
 volumes:
   grafana-volume:
