--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+# DS
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/transacao?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
 server.error.include-stacktrace=never
 
 # actuator
@@ -17,12 +28,21 @@ spring.application.name=Desafio_Transacao
 
 # Jaeger - Habilita ou não
 opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
-
 # Jaeger - Nome do serviço
 opentracing.jaeger.service-name=${spring.application.name}
-
 # Jaeger - Endereço para enviar os metadados (trace, span, etc)
 opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
-
 # Jaeger - Tipo de amostragem (probabilístico - 1 = 100%)
 opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
+
+# Kafka
+spring.kafka.bootstrap-servers=${KAFKA_HOST:localhost:9092}
+spring.kafka.topic.transactions =transacoes
+# Formato da chave (String) recebida!
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# Formato da mensagem \ evento (JSON) recebida(o)!
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+# Identificador do grupo de consumo
+spring.kafka.consumer.group-id=${KAFKA_CONSUMER_GROUP_ID:grupoTransacoes}
+# Modelo de coleta do consumidor (latest, earliest, none)
+spring.kafka.consumer.auto-offset-reset=${KAFKA_AUTO-OFFSET-RESET:latest}
