--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ management.endpoint.health.show-details=always
 
 
 # resource server config jwt
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URI:http://host.docker.internal:18080/auth/realms/transacao}
-#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWKS_URI:http://host.docker.internal:18080/auth/realms/transacao/protocol/openid-connect/certs}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URI:http://host.docker.internal:18080/auth/realms/transacao}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWKS_URI:http://host.docker.internal:18080/auth/realms/transacao/protocol/openid-connect/certs}
 
-#logging.level.org.springframework.security=off
+logging.level.org.springframework.security=off
 
 spring.application.name=Desafio_Transacao
 
